--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.5"
+    "zod": "^4.1.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
